--- a/src/App.scss
+++ b/src/App.scss
@@ -115,6 +115,12 @@ input[type=checkbox]{
 }
 
 .event {
+
+  @media only screen and (min-width: 480px){
+    .btn {
+      display: flex;
+    }
+  }
   .share-view {
     position: relative;
   }
