--- a/src/components/Spinner.scss
+++ b/src/components/Spinner.scss
@@ -35,6 +35,7 @@
   box-sizing: border-box;
   position: relative;
 }
+
 .loc-spinner::after {
   content: '';
   box-sizing: border-box;
@@ -48,6 +49,10 @@
   transform: rotate(45deg) translate(0, 0);
   box-sizing: border-box;
   animation: animMarker 0.4s ease-in-out infinite alternate;
+}
+
+.loc-spinner.white::after {
+  border-color: white;
 }
 .loc-spinner::before {
   content: '';
