--- a/src/components/Spinner.scss
+++ b/src/components/Spinner.scss
@@ -31,7 +31,7 @@
   width: 48px;
   height: 48px;
   display: block;
-  margin: 20px auto;
+  margin: 20px auto 40px auto;
   box-sizing: border-box;
   position: relative;
 }
