--- a/src/components/Spinner.scss
+++ b/src/components/Spinner.scss
@@ -31,9 +31,13 @@
   width: 48px;
   height: 48px;
   display: block;
-  margin: 20px auto 40px auto;
+  margin: 20px auto;
   box-sizing: border-box;
   position: relative;
+}
+
+.events-wrapper {
+  margin-bottom: 40px;
 }
 
 .loc-spinner::after {
