--- a/src/components/Event.scss
+++ b/src/components/Event.scss
@@ -5,12 +5,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 4px;
+    gap: 4px;
     flex-direction: column;
     @media only screen and (min-width: 480px) {
       flex-direction: row;
     }
     .start {
-      padding: 0 8px;
+      padding: 0;
     }
   }
   .body {
@@ -20,6 +21,7 @@
     padding: 8px 0  ;
   }
   h3 {
+    flex: 1;
     font-weight: normal;
     margin: 0;
     text-align: left;
