--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,12 @@
-#root {
-
+:root {
+  background-color: #64c1e6;
 }
 
 body {
   font-family: "Noto Sans", Helvetica, Arial;
   font-size: 14px;
 }
+
 *:focus {
   outline: 1px solid #656565 !important;
 }
@@ -193,13 +194,6 @@ input[type=checkbox]{
   }
 }
 
-#header {
-  h1 sup {
-    display: inline-block;
-    vertical-align: super;
-    font-size: 40%;
-  }
-}
 .menu {
   &.menu-main {
     list-style-type: none;
@@ -226,24 +220,19 @@ input[type=checkbox]{
 }
 
 
-.background, .foreground {
-  position: absolute;
+.background {
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
-.background {
-  background-color: #64c1e6;
+  z-index: -1;
   &.filled {
     background-color: white;
   }
 }
 .foreground {
-  z-index: 1;
   margin: 0 auto;
-  width: 100%;
-  overflow: scroll;
 }
 .bg-default {
   background-color: rgba(255, 255, 255, 0.91);
@@ -252,8 +241,20 @@ input[type=checkbox]{
 
 header {
   max-width: 320px;
-  margin: 20px auto;
+  padding: 16px 16px 0 16px;
+  @media only screen and (min-width: 321px){
+    margin: 20px auto;
+    padding: 0;
+  }
   h1 {
+    &.bg-default {
+      color: #213547;
+    }
+    sup {
+      display: inline-block;
+      vertical-align: super;
+      font-size: 40%;
+    }
     display: inline-flex;
     padding: 4px;
     border-radius: 12px;
