--- a/src/components/Event.scss
+++ b/src/components/Event.scss
@@ -4,8 +4,8 @@
     cursor: pointer;
     justify-content: space-between;
     align-items: center;
-    padding: 4px;
-    gap: 4px;
+    padding: 9px;
+    gap: 0px;
     flex-direction: column;
     @media only screen and (min-width: 720px) {
       flex-direction: row;
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    padding: 8px 0  ;
+    padding:0 0 8px 0;
   }
   h3 {
     flex: 1;
