--- a/src/App.scss
+++ b/src/App.scss
@@ -157,6 +157,9 @@ input[type=checkbox]{
     gap: 8px;
     padding: 0;
     justify-content: space-evenly;
+    align-items: center;
+    li {
+    }
     a {
       display: flex;
 
