--- a/src/components/Events.scss
+++ b/src/components/Events.scss
@@ -11,8 +11,10 @@
   flex-wrap: wrap;
   .first-part {
     margin: 0 auto;
+    width: 100%;
     @media only screen and (min-width: 420px) {
       flex: 1;
+      width: auto;
       display: flex;
     }
     input[type=text] {
