--- a/src/App.scss
+++ b/src/App.scss
@@ -115,6 +115,9 @@ h1 {
   }
 }
 
+input[type=text], textarea {
+    font-family: "Noto Sans", Helvetica, Arial;
+}
 input[type=checkbox]{
   margin-right: 8px;
 }
