--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -15,6 +15,7 @@
   background: linear-gradient(180deg, rgba(255,230,143,1) 0%, rgba(255,204,25,1) 32%, rgba(238,186,7,1) 100%);
   border-radius: 12px;
   border: 1px solid gray;
+  margin: 0 auto;
   &:hover {
     border-color: black;
     text-decoration: none;
