--- a/src/components/Events.scss
+++ b/src/components/Events.scss
@@ -9,7 +9,6 @@
   flex-direction: row;
   gap: 8px;
   flex-wrap: wrap;
-  .first-part {
     margin: 0 auto;
     width: 100%;
     @media only screen and (min-width: 420px) {
@@ -22,11 +21,16 @@
       box-sizing: border-box;
       font-weight: 300;
     }
-  }
-  .second-part {
-  display: flex;
-    gap: 8px;
-    margin: 0 auto;
-}
   margin-bottom: 8px;
+  .fields-inline {
+    gap: 24px;
+  }
+}
+
+
+.fields-inline {
+  display: flex;
+  gap: 8px;
+  margin: 0 auto;
+  justify-content: flex-end;
 }
