--- a/src/components/Events.scss
+++ b/src/components/Events.scss
@@ -31,6 +31,10 @@
 .fields-inline {
   display: flex;
   gap: 8px;
+  width: 100%;
   margin: 0 auto;
   justify-content: flex-end;
+  .field-max {
+    flex: 1;
+  }
 }
